<resources>
    <string name="ID_APP_NAME">SHEROES</string>
    <string name="ID_PROJECT_ID">409228886131</string>
    <string name="ID_APPS_FLYER_DEV_ID">CDkJAsj9hBUkp2V6ERGWd9</string>
    <string name="ID_ROBOTO_REGULAR">sans-serif</string>
    <string name="ID_ROBOTO_LIGHT">sans-serif-light</string>
    <string name="ID_ROBOTO_CONDENSED">sans-serif-condensed</string>
    <string name="ID_ROBOTO_MEDIUM">sans-serif-medium</string>
    <string name="ID_ROBOTO_BOLD">sans-serif-bold</string>
    <string name="ID_DD">DD</string>
    <string name="ID_MM">MM</string>
    <string name="ID_YYYY">YYYY</string>
    <string name="ID_POST_IN_MODERATION">Posts in Moderation</string>
    <string name="IDS_PLAY_SERVICE">Please update you Google play services</string>
    <string name="IDS_STR_NETWORK_TIME_OUT_TITLE">Connectivity Failure</string>
    <string name="IDS_STR_NETWORK_TIME_OUT_DESCRIPTION">No internet connection or connectivity low. Please check your connection and try again.</string>
    <string name="IDS_STR_TRY_AGAIN_TEXT">Try again</string>
    <string name="IDS_INVALID_USER_PASSWORD">Invalid user or password</string>
    <string name="IDS_UN_AUTHORIZE">The server encountered an error and could not complete your request.</string>
    <string name="ID_PROMPT_EMAIL">Email ID</string>
    <string name="ID_TODAY">Today</string>
    <string name="ID_CREATE">Create</string>
    <string name="ID_CREATED">Created</string>
    <string name="ID_PROMPT_PASSWORD">Password</string>
    <string name="ID_ACTION_LOG_IN_SHORT">Login</string>
    <string name="ID_ERROR_INVALID_EMAIL">This email address is invalid</string>
    <string name="ID_ERROR_INVALID_PASSWORD">Enter password</string>
    <string name="ID_POSTED_IN">posted in</string>
    <string name="ID_POSTED_AN">posted an</string>
    <string name="ID_CHALLENGE_ACCEPTED">Challenge Accepted</string>
    <string name="ID_CHALLENGE_COMPLETED">Challenge Completed</string>
    <string name="ID_NEW">NEW</string>
    <string name="ID_FB_VERIFY_MSG">Please verify account by linking your SHEROES account with your Facebook account.</string>
    <string name="ID_LETS_GET_TO">Let’s get to know each other </string>
    <string name="ID_TELL_US_MESSAGE">This will help you connect with other SHEROES and find relevant opportunities</string>
    <string name="ID_TELL_US_FORM_VALIDATION">Oops! You need to enter all details.</string>
    <string name="ID_MOBILE_NUMBER">Please enter valid mobile number</string>
    <string name="ID_CURRENT_STATUS_DATA">Please select current status</string>
    <string name="ID_LOCATION_DATA">Please select location</string>
    <string name="ID_LOCATION_RESULT">Sorry! We could not find a location matching your input.</string>
    <string name="ID_JOB_NOT_FOUND"> Sorry! Could not find jobs matching your criteria. Please swipe down to refresh and search again.</string>
    <string name="ID_CHAT_NOT_FOUND"> Sorry! Could not load you chat. Please swipe down to refresh and try again.</string>
    <string name="ID_SPEECH_PROMPT">Say something&#8230;</string>
    <string name="ID_SPEECH_NOT_SUPPORTED">Sorry! Your device doesn\'t support speech input</string>
    <string name="ID_NAVIGATION_DRAWER_OPEN">Open navigation drawer</string>
    <string name="ID_NAVIGATION_DRAWER_CLOSE">Close navigation drawer</string>
    <string name="title_activity_home_search">HomeSearchActivity</string>
    <string name="ID_FACEBOOK_APP_ID">994271980664614</string>
    <string name="ID_ALL">All</string>
    <string name="ID_COMMUNITIES">Communities</string>
    <string name="ID_GROWTH_BUDDIES_PUBLIC_PROFILE">ACTIVITY FEED</string>
    <string name="ID_PEOPLE_INTERESTED">people are interested</string>
    <string name="ID_TOTAL_GOING"> are going</string>
    <string name="ID_NO_MEMBER">No Member Selected</string>
    <string name="ID_NOTIFICATION">Notification</string>
    <string name="ID_JOBS">Jobs</string>
    <string name="ID_FEATURED">Featured</string>
    <string name="ID_MY_COMMUNITIES">My Communities</string>
    <string name="ID_FEED">Feed</string>
    <string name="ID_FEED_IMPRESSION">feed</string>
    <string name="ID_CHAMPION_LISTING">champion listing</string>
    <string name="ID_HELP_FRAGMENT">helpline</string>
    <string name="ID_DRAWER_NAVIGATION">drawer navigation</string>
    <string name="ID_COMMUNITIY">Community</string>
    <string name="ID_COMMUNITIY_POST">Community post</string>
    <string name="ID_BAD_RQUEST">Special characters are not allowed</string>
    <string name="ID_WOMEN_ERROR">Please declare that you are a woman by ticking the box.</string>
    <string name="ID_GENERIC_ERROR"> Oops, something went wrong. We are working on it, we will get it fixed as soon as we can.</string>
    <string name="ID_UNABLE_TO_COMMENT"> Sorry, unable to comment. Please try again in a few minutes.</string>
    <string name="ID_UNABLE_TO_EDIT_DELETE"> Sorry unable to edit,delete the comment. Please try again in a few minutes.</string>
    <string name="ID_SERVER_PROBLEM"> The server encountered an error and could not complete your request.</string>
    <string name="ID_SEARCH">Search</string>
    <string name="ID_SEARCH_LOCATION">Search Location</string>
    <string name="ID_SEARCH_DEGREE">Search Degree</string>
    <string name="ID_SEARCH_SCHOOL">Search School</string>
    <string name="ID_SEARCH_FIELD_OF_STUDY">Search Field Of Study</string>
    <string name="ID_SEARCH_INTEREST">Search Your Interest</string>
    <string name="ID_SEARCH_GOOD_AT">Search Good At</string>
    <string name="ID_RECENT_SEARCH">Recent Search</string>
    <string name="ID_SEARCH_IN_FEED">Communities, Articles &amp; Jobs</string>
    <string name="ID_SEARCH_IN_COMMUNITIES">Search Communities</string>
    <string name="ID_SEARCH_IN_ARTICLES">Search Articles</string>
    <string name="ID_SEARCH_IN_JOBS">Search Jobs</string>
    <string name="ID_TRENDING">Trending</string>
    <string name="ID_CHOOSE_CATEGORY">Choose Category</string>
    <string name="ID_DONE">Done</string>
    <string name="ID_PROCEED">Proceed</string>
    <string name="ID_OK">Ok</string>
    <string name="ID_OR">OR</string>
    <string name="ID_CANCEL">Cancel</string>
    <string name="ID_VIEW_MORE">View More</string>
    <string name="ID_VIEW_MORE_MENTOR">...View More</string>
    <string name="ID_STD">+91</string>
    <string name="ID_CELL_PHONE_NUMBER">CELL PHONE NUMBER</string>
    <string name="ID_VIEW_MORE_COMMENT">View more replies</string>
    <string name="ID_JOIN">Join</string>
    <string name="ID_POST_AS_ON_SHEROES">Post on SHEROES as :</string>
    <string name="ID_SHARE_WITH_FRIENDS">Share with friends</string>
    <string name="ID_DO_YOU_SEE">Do you see women getting harassed in</string>
    <string name="ID_YOUR_LOCALITY">your locality?</string>
    <string name="ID_LOCALITY_NAME"> pretty safe for women.</string>
    <string name="ID_TELL_YOUR_FRIENDS">Yes, Tell Your Friends About It</string>
    <string name="ID_INTERESTED">Interested</string>
    <string name="ID_GOING">Going</string>
    <string name="ID_REQUESTED">Requested</string>
    <string name="ID_JOINED">Joined</string>
    <string name="ID_VIEW">View</string>
    <string name="ID_REPLIES">Replies</string>
    <string name="ID_NO_REPLIES">No replies</string>
    <string name="ID_REPLY">Reply</string>
    <string name="ID_OPEN_BRACKET">(</string>
    <string name="ID_CLOSE_BRACKET">)</string>
    <string name="ID_REACTION">Reaction</string>
    <string name="ID_REACTIONS">Reactions</string>
    <string name="ID_NO_REACTION">No reaction</string>
    <string name="ID_APPLIED">Applied</string>
    <string name="ID_VIEWS">Views</string>
    <string name="ID_MIN_READ">min read</string>
    <string name="ID_COMMUNITY_ANNONYMOUS">ANONYMOUS</string>
    <string name="ID_DON_STAY_QUIET">Don\'t Stay Quiet !</string>
    <string name="ID_JOIN_CONVERSATION">Join the conversation...</string>
    <string name="ID_SHARE_INTEREST">Share Your Interest</string>
    <string name="ID_WHAT_GOOD_AT">What Are You Good At?</string>
    <string name="ID_EMPTY_TEXT">Please enter comment</string>
    <string name="ID_WISHTLE">Whistle</string>
    <string name="ID_LOVE">Love</string>
    <string name="ID_LIKE">With You</string>
    <string name="ID_FACE_PALM">Face Palm</string>
    <string name="ID_XOXO">Xoxo</string>
    <string name="ID_MORE_FROM_LIFE">More From Life</string>
    <string name="ID_FORGOT_PASSWORD">Forgot Password?</string>
    <string name="ID_PROFILE">Profile</string>
    <string name="ID_ARTICLE">Articles</string>
    <string name="ID_BOOKMARK">Bookmarks</string>
    <string name="ID_ARE_FEMALE">Please check for female</string>
    <string name="ID_SETTING">Settings</string>
    <string name="ID_ASK_SHEROES">Ask SHEROES</string>
    <string name="ID_HELPLINE">Helpline</string>
    <string name="ID_POST">Post as:</string>
    <string name="ID_POST_AS">Post as </string>
    <string name="ID_POSTED">Posted</string>
    <string name="ID_MEMBERS">Members</string>
    <string name="ID_MEMBER">Member</string>
    <string name="ID_NORMAL_MEMBER">normal member</string>
    <string name="ID_ADMIN">Admin</string>
    <string name="ID_OWNER_REMOVED">Owner removed</string>
    <string name="ID_REMOTE">Remote</string>
    <string name="ID_REMOVE">Remove</string>
    <string name="ID_INVITE">Invite</string>
    <string name="ID_TOTAL_IMAGES">4+</string>
    <string name="ID_SHARE">Share</string>
    <string name="ID_SHARE_WITH_COMMUNITY">Type here to share what you are thinking...</string>
    <string name="ID_FEMALE">SHEROES is a women only community and I declare I am a female. </string>
    <string name="ID_CHNAGE_PRIVACY"> Change Community Privacy</string>
    <string name="ID_CHANGE_PRIVACY_LABEL">The following changes will take place:</string>
    <string name="ID_CHANGE_OPEN_FIRST">• All members will remain members of the open community.</string>
    <string name="ID_CHANGE_OPEN_SECOND">• Posts will be visible to all SHEROES members.</string>
    <string name="ID_CHANGE_OPEN_THIRD">• Users with pending requests will be added as members.</string>
    <string name="ID_EDUCATION">Education</string>
    <string name="ID_CONTINUE">CONTINUE</string>
    <string name="ID_MORE">MORE</string>
    <string name="ID_OPP_SEARCh">Opportunity Search</string>
    <string name="ID_OPP_SEARCH_1">Business and Entrepreneurship</string>
    <string name="ID_CONTINUE_WITH_GOOGLE">Continue with Google</string>
    <string name="ID_CONTINUE_WITH_FACEBOOK">Continue with Facebook</string>
    <string name="ID_LOGGIN_FACEBOOK">Logging in...</string>
    <string name="ID_EMAIL">Or, Sign Up Using Email</string>
    <string name="ID_SELECT_PURPOSE">Select Purpose</string>
    <string name="ID_EMPLOYER_BRANDING">Employer Branding</string>
    <string name="ID_COSTOMER_REVIEW">Customer Review</string>
    <string name="ID_ASSOCIATE_EMPLOYEE_ENGAGEMENT">Associate/Employee engagement</string>
    <string name="ID_PRODUCT_PROMOTION">Product Promotion</string>
    <string name="ID_TAG_TXT">Choose tags which you’re interested in</string>
    <string name="ID_COMMUNITY_JOIN_TXT">I would like to join because..</string>
    <string name="ID_COMMUNITY_JOIN_REGION1">I am highly interested in joining this community</string>
    <string name="ID_COMMUNITY_JOIN_REGION2">I am already a member of this community outside of SHEROES</string>
    <string name="ID_JOIN_SHEROES_NETWORK">Join The SHEROES Network</string>
    <string name="ID_ONCE_CARD_TITLE">Welcome To The SHEROES Feed</string>
    <string name="ID_CIRCLE_SUPPORT">Your Circle Of Support</string>
    <string name="ID_ONCE_CARD_DETAIL1">Connect, Network and Hangout with peers and influencers</string>
    <string name="ID_ONCE_CARD_DETAIL2">from your field and other walks of life.</string>
    <string name="ID_ONCE_CARD_DETAIL3">Share your everyday achievements and inspire others.</string>
    <string name="ID_PROMISE">Promise we won\'t share your personal information</string>
</resources>