<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp"
        android:text="@string/ID_CHNAGE_PRIVACY"
        android:textSize="@dimen/sp_size_14"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="41dp"
        android:paddingTop="22.8dp"
        android:text="@string/ID_CHANGE_PRIVACY_LABEL"
        android:textSize="@dimen/sp_size_13"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="41dp"
        android:paddingRight="42.5dp"
        android:paddingTop="5.7dp"
        android:text="@string/ID_CHANGE_OPEN_FIRST" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="41dp"
        android:paddingRight="42.5dp"
        android:text="@string/ID_CHANGE_OPEN_SECOND" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="41dp"
        android:paddingRight="42.5dp"
        android:text="@string/ID_CHANGE_OPEN_THIRD" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_change_community_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="23.2dp"
            android:paddingTop="25.3dp"
            android:paddingRight="@dimen/dp_size_20"
            android:text="@string/ID_CANCEL"
            android:textAllCaps="true"
            android:textColor="#3949ab"
            android:textSize="@dimen/sp_size_12" />

        <TextView
            android:id="@+id/tv_change_community_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_change_community_cancel"
            android:paddingBottom="23.2dp"
            android:paddingLeft="24dp"
            android:paddingTop="25.3dp"
            android:text="@string/ID_CONTINUE"
            android:textAllCaps="true"
            android:textColor="#3949ab"
            android:textSize="@dimen/sp_size_12" />
    </RelativeLayout>
</LinearLayout>
