<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/li_login_via_fb_google"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/grey8"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_80"
            android:layout_marginRight="@dimen/dp_size_80"
            android:layout_marginTop="@dimen/dp_size_50"
            android:fontFamily="@string/ID_ROBOTO_MEDIUM"
            android:text="@string/ID_JOIN_SHEROES_NETWORK"
            android:textColor="@color/pure_black"
            android:textSize="@dimen/sp_size_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_size_25"
            android:src="@drawable/ic_login_women" />

        <CheckBox
            android:id="@+id/cb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_size_16"
            android:layout_marginTop="@dimen/dp_size_24"
            android:alpha=".55"
            android:button="@drawable/selecter_check_uncheck_women"
            android:checked="false"
            android:fontFamily="@string/ID_ROBOTO_REGULAR"
            android:gravity="top"
            android:paddingLeft="@dimen/dp_size_10"
            android:text="@string/ID_FEMALE"
            android:textColor="@color/pure_black"
            android:textSize="@dimen/sp_size_16" />

        <Button
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_size_50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_size_16"
            android:layout_marginRight="@dimen/dp_size_16"
            android:layout_marginTop="@dimen/dp_size_32"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_size_16"
            android:textAllCaps="false"
            android:paddingLeft="@dimen/dp_size_40"
            android:text="@string/ID_CONTINUE_WITH_GOOGLE"
            android:background="@drawable/ic_google_plus" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/click_to_join_fb_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_size_50"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_size_20"
            android:layout_marginLeft="@dimen/dp_size_16"
            android:layout_marginRight="@dimen/dp_size_16"
            android:background="@drawable/ic_fb_signup"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/dp_size_60"
            android:textSize="@dimen/sp_size_16"
            android:textStyle="normal"
            fb:login_text="@string/ID_CONTINUE_WITH_FACEBOOK"
            fb:logout_text="@string/ID_LOGGIN_FACEBOOK" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_size_10"
            android:alpha=".84"
            android:fontFamily="@string/ID_ROBOTO_REGULAR"
            android:text="@string/ID_PROMISE"
            android:textAlignment="center"
            android:textColor="@color/pure_black"
            android:textSize="@dimen/sp_size_14" />

        <LinearLayout
            android:id="@+id/tv_continue_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_size_70"
            android:layout_gravity="center">


            <TextView
                android:id="@+id/tv_email_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@string/ID_ROBOTO_BOLD"
                android:paddingTop="@dimen/dp_size_10"
                android:paddingLeft="@dimen/dp_size_5"
                android:paddingRight="@dimen/dp_size_10"
                android:paddingBottom="@dimen/dp_size_10"
                android:text="@string/ID_EMAIL"
                android:textColor="@color/email"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/rl_sign_up_form"
        layout="@layout/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</FrameLayout>