<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="@dimen/dp_size_10"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_size_16"
        android:id="@+id/r1_add_education_card">







    <TextView
        android:id="@+id/tv_lookinfor_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/ID_ROBOTO_REGULAR"
        android:text="@string/ID_EDUCATION"
        android:textAllCaps="true"
        android:textColor="@color/dashboard_fed_text"
        android:textSize="@dimen/sp_size_13" />


        <TextView
        android:id="@+id/tv_add_about_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:drawableRight="@drawable/ic_add_city_icon"
        />


</RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_lookingfor_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/ID_ROBOTO_MEDIUM"
            android:padding="@dimen/dp_size_16"
            android:text="@string/ID_OPP_SEARCh"
            android:textColor="@color/searchbox_hint_text_color"
            android:textSize="@dimen/dp_size_13" />
        <TextView
            android:id="@+id/tv_lookingfor_text2"
            android:layout_width="@dimen/dp_size_270"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_lookingfor_text1"
            android:fontFamily="@string/ID_ROBOTO_MEDIUM"
            android:padding="@dimen/dp_size_16"
            android:text="@string/ID_OPP_SEARCH_1"
            android:textColor="@color/searchbox_hint_text_color"
            android:textSize="@dimen/dp_size_13" />
        <TextView
            android:id="@+id/tv_looking_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_lookingfor_text1"
            android:fontFamily="@string/ID_ROBOTO_MEDIUM"
            android:padding="@dimen/dp_size_16"
            android:text="@string/ID_MORE"
            android:textColor="@color/blue"
            android:textSize="@dimen/dp_size_13" />

    </RelativeLayout>

</LinearLayout>
